fixed the top bar content align.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -65,20 +65,23 @@
 #animal-table-top-bar {
   display: flex;
   flex-flow: row wrap;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
 }
 
 #animal-page-title {
-  flex: 1;
+  flex: none;
 }
 
-#export-xls-btn {
+#export-btn-wrapper {
   flex: 1;
+  max-width: 15rem;
 }
 
 #animal-search-sect {
   flex: 1;
+  margin-left: auto;
+  max-width: 40rem;
 }
 
 #animal-table {
